@@ -2,7 +2,6 @@ package com.shatteredpixel.shatteredpixeldungeon.items;
 
 import com.shatteredpixel.shatteredpixeldungeon.Assets;
 import com.shatteredpixel.shatteredpixeldungeon.actors.hero.Hero;
-import com.shatteredpixel.shatteredpixeldungeon.items.potions.Potion;
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfExperience;
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfFrost;
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfHaste;
@@ -15,7 +14,6 @@ import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfParalyticG
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfPurity;
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfStrength;
 import com.shatteredpixel.shatteredpixeldungeon.items.potions.PotionOfToxicGas;
-import com.shatteredpixel.shatteredpixeldungeon.items.scrolls.Scroll;
 import com.shatteredpixel.shatteredpixeldungeon.items.scrolls.ScrollOfIdentify;
 import com.shatteredpixel.shatteredpixeldungeon.items.scrolls.ScrollOfLullaby;
 import com.shatteredpixel.shatteredpixeldungeon.items.scrolls.ScrollOfMagicMapping;
@@ -49,8 +47,8 @@ import java.util.List;
 
 public class MysticalOrb extends Item {
 
-    private static final String AC_USE_AS_POTION = "POTION";
-    private static final String AC_USE_AS_SCROLL = "SCROLL";
+	private static final String AC_USE_AS_POTION = "POTION";
+	private static final String AC_USE_AS_SCROLL = "SCROLL";
 
 	{
 		image = ItemSpriteSheet.MYSTICAL_ORB;
@@ -63,10 +61,10 @@ public class MysticalOrb extends Item {
 	}
 
 	@Override
-	public ArrayList<String> actions( Hero hero ) {
-		ArrayList<String> actions = super.actions( hero );
-        actions.add( AC_USE_AS_POTION );
-        actions.add( AC_USE_AS_SCROLL );
+	public ArrayList<String> actions(Hero hero) {
+		ArrayList<String> actions = super.actions(hero);
+		actions.add(AC_USE_AS_POTION);
+		actions.add(AC_USE_AS_SCROLL);
 		return actions;
 	}
 
@@ -75,11 +73,10 @@ public class MysticalOrb extends Item {
 
 		super.execute(hero, action);
 
-		if (action.equals(AC_USE_AS_POTION) ||
-			action.equals(AC_USE_AS_SCROLL)) {
-            detach( hero.belongings.backpack );
-			GameScene.show( new WndSelectEffect( action ) );
-        }
+		if (action.equals(AC_USE_AS_POTION) || action.equals(AC_USE_AS_SCROLL)) {
+			detach(hero.belongings.backpack);
+			GameScene.show(new WndSelectEffect(action));
+		}
 	}
 
 	@Override
@@ -97,70 +94,47 @@ public class MysticalOrb extends Item {
 		return 100 * quantity;
 	}
 
-	List<Class<?extends Item>> potionClasses = Arrays.asList(
-		PotionOfExperience.class,
-		PotionOfFrost.class,
-		PotionOfHaste.class,
-		PotionOfHealing.class,
-		PotionOfInvisibility.class,
-		PotionOfLevitation.class,
-		PotionOfLiquidFlame.class,
-		PotionOfMindVision.class,
-		PotionOfParalyticGas.class,
-		PotionOfPurity.class,
-		PotionOfStrength.class,
-		PotionOfToxicGas.class
-	);
+	List<Class<? extends Item>> potionClasses = Arrays.asList(PotionOfExperience.class, PotionOfFrost.class,
+			PotionOfHaste.class, PotionOfHealing.class, PotionOfInvisibility.class, PotionOfLevitation.class,
+			PotionOfLiquidFlame.class, PotionOfMindVision.class, PotionOfParalyticGas.class, PotionOfPurity.class,
+			PotionOfStrength.class, PotionOfToxicGas.class);
 
-	List<Class<?extends Item>> scrollClasses = Arrays.asList(
-		ScrollOfIdentify.class,
-		ScrollOfLullaby.class,
-		ScrollOfMagicMapping.class,
-		ScrollOfMirrorImage.class,
-		ScrollOfRetribution.class,
-		ScrollOfRage.class,
-		ScrollOfRecharging.class,
-		ScrollOfRemoveCurse.class,
-		ScrollOfTeleportation.class,
-		ScrollOfTerror.class,
-		ScrollOfTransmutation.class,
-		ScrollOfUpgrade.class
-	);
+	List<Class<? extends Item>> scrollClasses = Arrays.asList(ScrollOfIdentify.class, ScrollOfLullaby.class,
+			ScrollOfMagicMapping.class, ScrollOfMirrorImage.class, ScrollOfRetribution.class, ScrollOfRage.class,
+			ScrollOfRecharging.class, ScrollOfRemoveCurse.class, ScrollOfTeleportation.class, ScrollOfTerror.class,
+			ScrollOfTransmutation.class, ScrollOfUpgrade.class);
 
-	static Class curSelection = null;
+	static Class<?> curSelection = null;
 
 	public class WndSelectEffect extends Window {
-		
+
 		private static final int WIDTH = 120;
 		private static final int BTN_SIZE = 20;
 
-		public WndSelectEffect( String action ){
-			
+		public WndSelectEffect(String action) {
+
 			IconTitle titlebar = new IconTitle();
-			titlebar.icon( new ItemSprite(ItemSpriteSheet.MYSTICAL_ORB, null) );
-			titlebar.label( Messages.get(MysticalOrb.class, "name") );
-			titlebar.setRect( 0, 0, WIDTH, 0 );
-			add( titlebar );
-			
+			titlebar.icon(new ItemSprite(ItemSpriteSheet.MYSTICAL_ORB, null));
+			titlebar.label(Messages.get(MysticalOrb.class, "name"));
+			titlebar.setRect(0, 0, WIDTH, 0);
+			add(titlebar);
+
 			RenderedTextBlock text = PixelScene.renderTextBlock(6);
-			text.text( Messages.get(this, action + "_text") );
+			text.text(Messages.get(this, action + "_text"));
 			text.setPos(0, titlebar.bottom());
-			text.maxWidth( WIDTH );
+			text.maxWidth(WIDTH);
 			add(text);
-			
-			final RedButton choose = new RedButton(""){
+
+			final RedButton choose = new RedButton("") {
 				@Override
 				protected void onClick() {
 					super.onClick();
-					
-					try
-					{
-						Item selectedItem = (Item) curSelection.newInstance();
+
+					try {
+						Item selectedItem = (Item) curSelection.getDeclaredConstructor().newInstance();
 						selectedItem.collect();
-						Game.scene().addToFront(new WndItem( null, selectedItem, true) );
-					}
-					catch(Exception e)
-					{
+						Game.scene().addToFront(new WndItem(null, selectedItem, true));
+					} catch (Exception e) {
 						GLog.n(e.getMessage());
 					}
 
@@ -168,50 +142,51 @@ public class MysticalOrb extends Item {
 				}
 			};
 			choose.visible = false;
-			choose.icon( new ItemSprite( new MysticalOrb() ) );
+			choose.icon(new ItemSprite(new MysticalOrb()));
 			choose.enable(false);
 			choose.setRect(0, 95, WIDTH, 20);
 			add(choose);
-			
-			List<Class<?extends Item>> classList = action.equals( AC_USE_AS_POTION ) ? potionClasses : scrollClasses;
-			
-			float left = (WIDTH - BTN_SIZE*((classList.size()+1)/2))/2f;;
+
+			List<Class<? extends Item>> classList = action.equals(AC_USE_AS_POTION) ? potionClasses : scrollClasses;
+
+			float left = (WIDTH - BTN_SIZE * ((classList.size() + 1) / 2)) / 2f;
+			;
 			float top = text.bottom() + 5;
-			int row = action.equals( AC_USE_AS_POTION ) ? 0 : 16;
+			int row = action.equals(AC_USE_AS_POTION) ? 0 : 16;
 			int placed = 0;
 
-			for (int i = 0; i < classList.size(); i++){
+			for (int i = 0; i < classList.size(); i++) {
 				final int j = i;
-				IconButton btn = new IconButton(){
+				IconButton btn = new IconButton() {
 					@Override
 					protected void onClick() {
 						curSelection = classList.get(j);
 						choose.visible = true;
-						choose.text( Messages.get(curSelection, "name") );
+						choose.text(Messages.get(curSelection, "name"));
 						choose.enable(true);
 						super.onClick();
 					}
 				};
-				Image im = new Image(Assets.CONS_ICONS, 7*i, row, 7, 8);
+				Image im = new Image(Assets.CONS_ICONS, 7 * i, row, 7, 8);
 				im.scale.set(2f);
 				btn.icon(im);
-				btn.setRect(left + placed*BTN_SIZE, top, BTN_SIZE, BTN_SIZE);
+				btn.setRect(left + placed * BTN_SIZE, top, BTN_SIZE, BTN_SIZE);
 				add(btn);
-				
+
 				placed++;
-				if (placed == ((classList.size()+1)/2)){
+				if (placed == ((classList.size() + 1) / 2)) {
 					placed = 0;
-					if (classList.size() % 2 == 1){
-						left += BTN_SIZE/2f;
+					if (classList.size() % 2 == 1) {
+						left += BTN_SIZE / 2f;
 					}
 					top += BTN_SIZE;
 				}
 			}
-			
+
 			resize(WIDTH, 115);
-			
+
 		}
-		
+
 		@Override
 		public void onBackPressed() {
 			super.onBackPressed();
